samples/_failures_safe/1761646846_e650ff_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2dc95d20.c: In function ‘main’:
./samples/SAFE/__tmp_2dc95d20.c:173:5: error: expected declaration or statement at end of input
  173 |     int col = 1;
      |     ^~~
